# enterprise-regulation-rag

./: .env.example  .env.server.example  .gitignore  LICENSE  PROJECT_CONTEXT.md  README.md  README_CN.md  app.py  bad_cases.json  main.py  requirements.txt  start.bat  start.sh  start_desktop.bat  start_desktop.sh  test_api.py
.kiro/specs/enterprise-regulation-rag-desktop/: .config.kiro  design.md  requirements.md  tasks.md
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs
desktop/src/api/: client.ts
desktop/src/auth/: session.ts
desktop/src/components/: LanguageSwitcher.tsx  ModeSwitcher.tsx
desktop/src/hooks/: useDeveloperMode.ts
desktop/src/i18n/: index.tsx  messages.ts  types.ts
desktop/src/pages/: Admin.tsx  Chat.tsx  Login.tsx
desktop/src/types/: chat.ts
src/: __init__.py
src/api/: __init__.py  rag_api.py
src/config/: __init__.py  settings.py
src/graph/: __init__.py  nodes.py  state.py  workflow.py
src/ingestion/: __init__.py  loader.py
src/server/: __init__.py  config.py  db.py  env_file.py  extract.py  indexing.py  injection.py  main.py  models.py  retrieval.py  schemas.py  security.py
src/server/routers/: __init__.py  admin.py  auth.py  history.py  kb.py  query.py  system.py  test_kb.py
src/utils/: __init__.py  checks.py  json_parser.py
(+12 files in other folders)
